@@ -701,7 +701,7 @@ set {
 
 set {
 	kline-address "set.this.email";
-	modes-on-connect "+xw";
+	modes-on-connect "+ixw";
 	modes-on-oper	 "+xwgs";
 	oper-auto-join "#opers";
 	dns {
